--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-cssmin": "^0.2.0",
+    "gulp-imagemin": "^3.3.0",
     "gulp-less": "^3.3.2",
     "gulp-load-plugins": "^1.5.0",
     "gulp-plumber": "^1.1.0",
