--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-plumber": "^1.1.0",
     "gulp-util": "^3.0.8"
+  },
+  "dependencies": {
+    "gulp": "^3.9.1",
+    "gulp-load-plugins": "^1.5.0"
   }
 }
