--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-less": "^3.3.2",
     "gulp-load-plugins": "^1.5.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-sprite-generator": "^0.2.3",
     "gulp-util": "^3.0.8"
   },
   "dependencies": {
