--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "gulp": "^3.9.1",
     "gulp-htmlhint": "^0.3.1",
+    "gulp-imagemin": "^3.3.0",
     "gulp-load-plugins": "^1.5.0"
   }
 }
